# stock-wizard

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md
.claude/: launch.json
.github/.workflows/: ci.yml
.github/workflows/: ci.yml
api/: .env.example  auth.py  config.py  db.py  deps.py  main.py  models.py  pyproject.toml  requirements-dev.txt  schemas.py  seed.py
api/alembic/: env.py
api/alembic/versions/: 0001_initial.py  0002_user_auth_id.py  0003_watchlist_items.py  0004_orders.py  0005_achievements.py
api/services/: __init__.py  achievements.py  portfolio.py
api/services/analysis/: __init__.py  achievements.py  checkup.py  history.py  movers.py  moves.py  portfolio.py  risk.py  whatif.py
api/services/market/: __init__.py  cache.py  candles.py  client.py
api/services/sim/: __init__.py  accounts.py  engine.py  orders.py
api/services/tutor/: engine.py  glossary.py  guard.py  prompt.py  provider.py  tools.py
api/tests/: conftest.py  test_achievements.py  test_analysis.py  test_api.py  test_auth.py  test_candle_client.py  test_checkup.py  test_guard.py  test_history.py  test_market_client.py  test_movers.py  test_moves.py  test_orders.py  test_risk.py  test_seed.py  test_sim.py  test_tutor.py  test_whatif.py
docs/: architecture.md  decisions.md  product-spec.md  roadmap.md  rodamap.md
scripts/: pre-commit-prettier.sh
web/: .env.example  .prettierignore  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  proxy.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/activity/: page.tsx
web/app/glossary/: page.tsx
web/app/holdings/: page.tsx
web/app/login/: actions.ts  page.tsx
web/app/stock/[symbol]/: page.tsx
web/app/transactions/: page.tsx
web/components/: Achievements.tsx  AllocationChart.tsx  BigMoveNote.tsx  BiggestMoves.tsx  CalmToggle.tsx  Checkup.tsx  FirstTimeCallout.tsx  HoldingsTable.tsx  LiveQuote.tsx  Markdown.tsx  Nav.tsx  NeverSoldNote.tsx  NewsFeed.tsx  OpenOrders.tsx  OrderForm.tsx  PerformanceChart.tsx  PortfolioSummary.tsx  PriceChart.tsx  ResetButton.tsx  StartHere.tsx  Term.tsx  TickerSearch.tsx  TimeMachine.tsx  TopHoldings.tsx  TransactionsTable.tsx  Tutor.tsx  TutorPanel.tsx  Watchlist.tsx  WatchlistStar.tsx
web/lib/: api.ts  format.ts  glossary.ts
web/lib/supabase/: client.ts  config.ts  server.ts
