[project]
name = "stockwiz-api"
version = "0.1.0"
description = "Backend for the StockWiz paper-trading app"
requires-python = ">=3.12"
# App/runtime deps (fastapi, uvicorn, the db driver, etc.) get added in M0 with `uv add ...`.
dependencies = []

[dependency-groups]
# Dev tooling, managed with `uv add --dev <tool>`. Replaces the old requirements-dev.txt.
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.0",
]

[tool.uv]
# This is an application, not a distributable library, so uv should not try to build/install it.
package = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
# Sensible and not noisy to start: pyflakes (F), pycodestyle (E, W), isort (I),
# flake8-bugbear (B), pyupgrade (UP), comprehensions (C4). Add more as the code grows.
select = ["E", "W", "F", "I", "B", "UP", "C4"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_redundant_casts = true
warn_unused_ignores = true
# Do not fail on third-party libraries that ship no type stubs.
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
